--- a/web.css
+++ b/web.css
@@ -85,7 +85,18 @@ body {
 	margin:0;
 	padding:0;
 	height:100%;
+	-webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
 }
+
+@-webkit-keyframes fontfix {
+    from { opacity: 1; }
+    to   { opacity: 1; }
+}
+
 #wrapper {
 	min-height:100%;
 	position:relative;
